--- a/mapping-components/views/index.html
+++ b/mapping-components/views/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>css-in-js</title>
+        <title>mapping-components</title>
         <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style/style.css" />
     </head>
